--- a/.github/workflows/prod-ci.yaml
+++ b/.github/workflows/prod-ci.yaml
@@ -41,13 +41,13 @@ jobs:
       HOSTED_ZONE_ID: ${{ secrets.HOSTED_ZONE_ID }}
       DOMAIN_NAME: ${{ github.event.repository.name }}.${{ secrets.DOMAIN_NAME }}
       STACK_NAME: ${{ github.event.repository.name }}
-      IMAGE_TAG: ${{ github.sha }}
+      IMAGE_TAG: ${{ github.sha }}-xiaowang
     steps:
       - uses: actions/checkout@v3
       - id: aws-auth
         uses: "./.github/actions/aws-auth"
       - name: apply cloudformation stack
-        run: "true"
+        run: aws cloudformation deploy --stack-name ${STACK_NAME} --template-file cloudformation/stack.yaml --parameter-overrides SecurityGroupName=devops-girls-2023 KeyName=devops-girls-2023 HostedZoneId=${HOSTED_ZONE_ID} DomainName=${DOMAIN_NAME} --capabilities CAPABILITY_NAMED_IAM --no-fail-on-empty-changeset
       # - name: deploy application container
       #   run: |
       #     cd ansible
