--- a/cloudformation/stack.yaml
+++ b/cloudformation/stack.yaml
@@ -23,7 +23,7 @@ Resources:
       ImageId: ami-09964535fc01efa5f
       InstanceType: t2.micro
       KeyName: devops-girls-2023
-      securityGroups:
+      SecurityGroups:
         - !Ref SecurityGroupName
       IamInstanceProfile: !Ref InstanceProfile
       UserData:
